...
            "value" : "Wortquelle wählen"
          }
        },
        "es" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Elegir fuente de palabras"
          }
        },
        "fr" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Choisir la source des mots"
...
            "state" : "translated",
            "value" : "議論タイマー"
          }
        }
      }
    },
    "Done" : {
      "comment" : "The text for a button that dismisses a sheet. In this case, it dismisses the \"How to Play\" sheet.",
      "isCommentAutoGenerated" : true,
      "localizations" : {
        "de" : {
          "stringUnit" : {
            "state" : "translated",
...
            "value" : "Spieleinstellungen"
          }
        },
        "es" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Ajustes del juego"
          }
        },
        "fr" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Paramètres du jeu"
...
            "value" : "Kategorien wählen"
          }
        },
        "es" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Elegir categorías"
          }
        },
        "fr" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Choisir des catégories"
...
            "state" : "translated",
            "value" : "順番に一語のヒントを出しましょう。\n言葉を知らない人を見つけましょう！"
          }
        }
      }
    },
    "Tap anywhere to continue" : {
      "localizations" : {
        "de" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Tippe irgendwo um fortzufahren"
          }
...
            "state" : "translated",
            "value" : "%@に投票"
          }
        }
      }
    },
    "Vote Recorded!" : {
      "localizations" : {
        "de" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Stimme Registriert!"
          }
...
